--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hola mundo desde Maxim Polyak
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/ProfilePhoto.ico" type="image/x-icon">n
+    <title>Document</title>
+</head>
+<body>
+    Hola mundo desde Maxim Polyak
+</body>
+</html>
